[gd_scene load_steps=15 format=3 uid="uid://cfef2coa1s3cm"]

[ext_resource type="Texture2D" uid="uid://cspnnapkvvwxk" path="res://assets/natoncho_jde_mnogo_oriz_zashtoto_e_natoncho.jpg" id="1_3sfrn"]
[ext_resource type="Texture2D" uid="uid://bmr4auwdjkki2" path="res://assets/power-button.png" id="1_7vodn"]
[ext_resource type="Script" path="res://scripts/power_button.gd" id="2_1kr5t"]
[ext_resource type="Texture2D" uid="uid://cgbc1tidiwagd" path="res://assets/galabin.png" id="2_hris7"]
[ext_resource type="Script" path="res://scripts/clock.gd" id="3_i5f4w"]
[ext_resource type="Script" path="res://scripts/dir_select.gd" id="5_o8lt5"]
[ext_resource type="Script" path="res://scripts/game_select.gd" id="6_dlo4q"]
[ext_resource type="Texture2D" uid="uid://c43k20ocatrys" path="res://assets/back.png" id="6_ly5v0"]
[ext_resource type="Script" path="res://scripts/game_details.gd" id="9_ps7am"]
[ext_resource type="Script" path="res://scripts/mount_usb.gd" id="10_eatvw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b3jdl"]
atlas = ExtResource("6_ly5v0")
region = Rect2(227.9, 0, 183.1, 131.62)

[sub_resource type="Animation" id="Animation_683q3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(445, 92)]
}

[sub_resource type="Animation" id="Animation_jlpgg"]
resource_name = "slide"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HBoxContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(445, 92), Vector2(89, 92)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bq4q2"]
_data = {
"RESET": SubResource("Animation_683q3"),
"slide": SubResource("Animation_jlpgg")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(244, 324)
scale = Vector2(0.41, 0.41)
texture = ExtResource("1_3sfrn")

[node name="Background2" type="Sprite2D" parent="."]
position = Vector2(899, 324)
scale = Vector2(0.41, 0.41)
texture = ExtResource("1_3sfrn")
flip_h = true

[node name="PowerButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1056.0
offset_top = 16.0
offset_right = 1136.0
offset_bottom = 96.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_7vodn")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_1kr5t")

[node name="Clock" type="Label" parent="."]
layout_mode = 0
offset_left = 911.0
offset_top = 20.0
offset_right = 1039.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 50
text = "00:00"
script = ExtResource("3_i5f4w")

[node name="Dir_select" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_o8lt5")

[node name="Installed Games" type="Button" parent="Dir_select"]
layout_mode = 2
offset_left = 256.0
offset_top = 192.0
offset_right = 512.0
offset_bottom = 448.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Installed Games
"

[node name="Games on USB" type="Button" parent="Dir_select"]
layout_mode = 2
offset_left = 640.0
offset_top = 192.0
offset_right = 896.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 30
disabled = true
text = "Games on USB
"

[node name="Game_select" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_dlo4q")

[node name="Back" type="TextureButton" parent="Game_select"]
visible = false
layout_mode = 0
offset_right = 109.0
offset_bottom = 104.0
texture_normal = SubResource("AtlasTexture_b3jdl")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="HBoxContainer" type="HBoxContainer" parent="Game_select"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
offset_left = 445.0
offset_top = 92.0
offset_right = 1071.0
offset_bottom = 348.0
size_flags_horizontal = 3
theme_override_constants/separation = 100

[node name="Slide" type="AnimationPlayer" parent="Game_select"]
libraries = {
"": SubResource("AnimationLibrary_bq4q2")
}

[node name="Timer" type="Timer" parent="Game_select"]
wait_time = 3.0
autostart = true

[node name="Game_details" type="Panel" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 1024.0
offset_bottom = 576.0
script = ExtResource("9_ps7am")

[node name="Game_icon" type="Sprite2D" parent="Game_details"]
position = Vector2(161, 160.75)
texture = ExtResource("2_hris7")

[node name="Run" type="Button" parent="Game_details"]
layout_mode = 0
offset_left = 65.0
offset_top = 360.0
offset_right = 297.0
offset_bottom = 423.0
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="Back" type="Button" parent="Game_details"]
layout_mode = 0
offset_left = 800.0
offset_right = 896.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="Delete" type="Button" parent="Game_details"]
layout_mode = 0
offset_left = 600.0
offset_top = 360.0
offset_right = 832.0
offset_bottom = 423.0
theme_override_font_sizes/font_size = 40
text = "Delete"

[node name="Download_or_Update" type="Button" parent="Game_details"]
layout_mode = 0
offset_left = 331.0
offset_top = 360.0
offset_right = 563.0
offset_bottom = 423.0
theme_override_font_sizes/font_size = 40
text = "Update
"

[node name="Name" type="Label" parent="Game_details"]
layout_mode = 0
offset_left = 256.0
offset_top = 65.0
offset_right = 829.0
offset_bottom = 169.0
theme_override_font_sizes/font_size = 50
text = "Lorum Ipson"
horizontal_alignment = 2

[node name="Description" type="Label" parent="Game_details"]
layout_mode = 0
offset_left = 295.0
offset_top = 122.0
offset_right = 868.0
offset_bottom = 250.0
theme_override_font_sizes/font_size = 26
text = "Lorum Ipson"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="Creators" type="Label" parent="Game_details"]
layout_mode = 0
offset_left = 256.0
offset_top = 268.0
offset_right = 829.0
offset_bottom = 396.0
theme_override_font_sizes/font_size = 20
text = "Creators: "
horizontal_alignment = 2

[node name="Version" type="Label" parent="Game_details"]
layout_mode = 0
offset_left = 256.0
offset_top = 320.0
offset_right = 829.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 20
text = "1.1"
horizontal_alignment = 2

[node name="Focus_delay" type="Timer" parent="Game_details"]
wait_time = 0.5
one_shot = true

[node name="Mount_USB" type="Node" parent="."]
script = ExtResource("10_eatvw")

[node name="Timer" type="Timer" parent="Mount_USB"]
wait_time = 3.0

[connection signal="pressed" from="PowerButton" to="PowerButton" method="_on_pressed"]
[connection signal="pressed" from="Dir_select/Installed Games" to="Dir_select" method="_on_installed_games_pressed"]
[connection signal="pressed" from="Dir_select/Games on USB" to="Dir_select" method="_on_games_on_usb_pressed"]
[connection signal="pressed" from="Game_select/Back" to="Game_select" method="_on_back_pressed"]
[connection signal="timeout" from="Game_select/Timer" to="Game_select" method="_on_timer_timeout"]
[connection signal="pressed" from="Game_details/Run" to="Game_details" method="_on_run_pressed"]
[connection signal="pressed" from="Game_details/Back" to="Game_details" method="_on_back_pressed"]
[connection signal="pressed" from="Game_details/Delete" to="Game_details" method="_on_delete_pressed"]
[connection signal="pressed" from="Game_details/Download_or_Update" to="Game_details" method="_on_download_or_update_pressed"]
[connection signal="timeout" from="Game_details/Focus_delay" to="Game_details" method="_on_focus_delay_timeout"]
[connection signal="timeout" from="Mount_USB/Timer" to="Mount_USB" method="_on_timer_timeout"]
